<resources>
    <string name="app_name">Projet Final Quentin Piot</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="nom_etudiant">Nom de l\'étudiant :</string>
    <string name="ajouter">Ajouter</string>
    <string name="annuler">Annuler</string>
    <string name="modifier">Modifier</string>

    <string name="title_activity_cursus">CursusActivity</string>
    <string name="programme">Programme :</string>
    <string name="ajout_etudiant">Ajout d\'un étudiant</string>
    <string name="ajout_cursus">Ajout d\'un cursus</string>
    <string name="edit_cursus">Modification d\'un cursus</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="nom_du_cursus">Nom du cursus</string>
    <string name="nouveau_nom">Nouveau nom</string>
    <string name="aucun_cursus">Aucun cursus</string>
    <string name="aucun_etudiant">Aucun étudiant</string>
    <string name="cursus_tv">Cursus :</string>
    <string name="modules_tv">Modules :</string>
    <string name="semestres_tv">Semestres :</string>
    <string name="ajout_semestre">Ajout d\'un semestre</string>
    <string name="nom_du_semestre">Nom du semestre</string>
    <string name="aucun_semestre">Aucun semestre</string>
    <string name="ajout_d_un_module">Ajout d\'un module</string>
    <string name="sigle">Sigle</string>
    <string name="cat_gorie">Catégorie</string>
    <string name="_0">0</string>
    <string name="liste_des_modules">Liste des modules:</string>
    <string name="cr_dits">Crédits</string>
    <string name="message">Message</string>
    <string name="duplication_d_un_cursus">Duplication d\'un cursus</string>
    <string name="historique_des_semestres">Historique des semestres</string>
    <string name="ajouter_un_nouveau_semestre">Ajouter un nouveau semestre</string>
    <string name="add_a_student">Add a student</string>
    <string name="fermer">Fermer</string>
    <string name="add_a_student">Add a student</string>
    <string name="message">Message</string>
    <string name="npml">NPML</string>
    <string name="etranger">ETRANGER</string>
    <string name="_180">/180</string>
    <string name="total">Total :</string>
</resources>