<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="fr.utt.if26.projet_final_if26.viewmodels.EtudiantViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.etudiant.AddEtudiantActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="200dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom_etudiant" />

            <EditText
                android:id="@+id/name_student_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:ems="10"
                android:hint="@string/nom"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textPersonName"
                android:text="@={viewModel.name}" />

            <EditText
                android:id="@+id/firstname_student_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:ems="10"
                android:hint="@string/prenom"
                android:text="@={viewModel.firstName}"
                android:inputType="textCapSentences|textPersonName"
                android:importantForAutofill="no" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/programme"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/programme_spinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/programmes_array"
                    android:onItemSelected="@{viewModel::onSelectItem}" />
            </LinearLayout>

            <Button
                android:id="@+id/add_student_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:onClick="@{()->viewModel.handleOnClickAddEtudiant()}"
                android:text="@string/ajouter"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>