<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="fr.utt.if26.projet_final_if26.viewmodels.EtudiantActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.etudiant.EtudiantActivity">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toTopOf="parent"
            custom:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/cursus_tv"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cursus_name_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:text="@string/modules_tv"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cursus_modules_number_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semestres_tv"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cursus_semestres_number_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.5" />

            </LinearLayout>


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:background="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Indicateurs :"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/arc_progress"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    custom:arc_bottom_text="CS"
                    custom:arc_max="12"
                    custom:arc_progress="6"
                    custom:arc_suffix_text="/12"
                    custom:arc_suffix_text_padding="1dp"
                    custom:arc_suffix_text_size="8sp"
                    custom:arc_text_size="18sp" />

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/arc_progress3"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"
                    custom:arc_bottom_text="TM"
                    custom:arc_max="16"
                    custom:arc_progress="5"
                    custom:arc_suffix_text="/12"
                    custom:arc_suffix_text_padding="1dp"
                    custom:arc_suffix_text_size="8sp"
                    custom:arc_text_size="18sp" />

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/arc_progress4"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"
                    custom:arc_bottom_text="ST"
                    custom:arc_max="64"

                    custom:arc_progress="36"
                    custom:arc_suffix_text="/64"
                    custom:arc_suffix_text_padding="1dp"
                    custom:arc_suffix_text_size="8sp"
                    custom:arc_text_size="18sp" />

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/arc_progress2"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"
                    custom:arc_bottom_text="ME"

                    custom:arc_max="64"
                    custom:arc_progress="36"
                    custom:arc_suffix_text="/64"
                    custom:arc_suffix_text_padding="1dp"
                    custom:arc_suffix_text_size="8sp"
                    custom:arc_text_size="18sp" />

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/arc_progress5"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"

                    custom:arc_bottom_text="HT"
                    custom:arc_max="64"
                    custom:arc_progress="36"
                    custom:arc_suffix_text="/64"
                    custom:arc_suffix_text_padding="1dp"
                    custom:arc_suffix_text_size="8sp"
                    custom:arc_text_size="18sp" />

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/arc_progress6"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="10dp"

                    custom:arc_bottom_text="CT"
                    custom:arc_max="64"
                    custom:arc_progress="36"
                    custom:arc_suffix_text="/64"
                    custom:arc_suffix_text_padding="1dp"
                    custom:arc_suffix_text_size="8sp"
                    custom:arc_text_size="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Semesestre à l'étranger :" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:background="@drawable/back_done"
                            android:padding="4dp"
                            android:text="VALIDE"
                            android:textColor="#ADF8CF"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="NPML" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:background="@drawable/back_undone"
                            android:padding="4dp"
                            android:text="À FAIRE"
                            android:textColor="#FFFFFF"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/arc_progress7"
                    android:layout_width="65dp"
                    android:layout_height="65dp"

                    android:layout_marginEnd="40dp"
                    custom:arc_bottom_text="Total"
                    custom:arc_max="64"
                    custom:arc_progress="36"
                    custom:arc_suffix_text="/64"
                    custom:arc_suffix_text_padding="1dp"
                    custom:arc_suffix_text_size="8sp"
                    custom:arc_text_size="18sp" />

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>